# saturace

./: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  README.md
.github/workflows/: build-mac.yml  build-windows.yml
installer/: saturace_installer.iss
